Fix overlapping arrows with text and check for responsive two column layout.

--- a/src/components/activity-page/section.scss
+++ b/src/components/activity-page/section.scss
@@ -216,7 +216,7 @@
       align-self: center;
       position: relative;
       white-space: nowrap;
-      width: 30px;
+      width: auto;
     }
   }
 }
